--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "jotai": "^2.15.2",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
+    "next-themes": "^0.4.6",
     "pyodide": "^0.29.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
