--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "jotai": "^2.15.2",
     "lucide-react": "^0.556.0",
+    "motion": "^12.24.7",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
     "pyodide": "^0.29.0",
